--- a/styles/sass/home/_home.scss
+++ b/styles/sass/home/_home.scss
@@ -14,11 +14,14 @@
     
     // Overlapped image
     .home-box-header {
-    margin-top: -24rem;
-    z-index: 15;
-    position: absolute;
-    right: 0;
-}
+        margin-top: -24rem;
+        z-index: 15;
+        position: absolute;
+        right: 0;
+        img {
+            width: 45vw;
+        }
+    }
 }
 
 
@@ -26,7 +29,8 @@
 // Under the Sea
 .under-the-sea {
     background-color: $pink;
-    height: 42vw;
+    height: 100%;
+    padding: 15rem 0;
     margin-top: -1.3rem;
     display: flex;
     justify-content: center;
@@ -35,7 +39,7 @@
 
     // Headings
     .text-container {
-        margin: 350px;
+        width: 50%;
         text-align: center;
         display: flex;
         flex-direction: column;
@@ -78,67 +82,89 @@
 
 // Read More sections
 .rm-wrapper {
+    width: 100%;
     background-color: $white;
-    height: 50.5vw;
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 1fr;
-    gap: 250px;
+    height: 52vw;
+    display: flex;
+    flex-direction: column;
     .rm-container1, .rm-container2 {
-        display: flex;
-        flex-direction: column;
-        h3 {
-            @include h6-font;
-            text-transform: uppercase;
-        }
-        p {
-            @include p-font;
+        .texts {
+            h3 {
+                @include h6-font;
+                text-transform: uppercase;
+            }
+            p {
+                @include p-font;
+            }
         }
     }
 }
 
 // left column
 .rm-container1 {
-    align-items: flex-end;
+    display: flex;
     img {
+        width: 42vw;
         margin-top: -3rem;
-        margin-right: 1.7rem;
+        object-fit: cover;
         box-shadow: 3rem 3rem 0px $orange;
     }
-    h3 {
-        text-align: right;
-        margin: 10rem 0 1rem 0;
-    }
-    p {
-        text-align: right;
-        margin: 0 0 0 12rem;
-    }
-    a {
-        @include read-more-button;
-        text-align: right;
-        margin-top: 2rem;
+    .texts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-start;
+        align-content: flex-start;
+        justify-content: center;
+        margin: 0 9rem 0 18rem;
+        h3 {
+            text-align: left;
+            margin: 0 0 1rem 0;
+        }
+        p {
+            text-align: left;
+            margin: 0 0 0 0;
+        }
+        a {
+            @include read-more-button;
+            text-align: right;
+            margin-top: 2rem;
+        }
     }
 }
 
-// right column
+// // right column
 .rm-container2 {
-    align-items: flex-start;
+    display: flex;
+    flex-direction: row-reverse;
     img {
+        width: 42vw;
         margin-top: 5rem;
         box-shadow: -3rem 3rem 0px $orange;
+        object-fit: cover;
+        
     }
-    h3 {
-        text-align: right;
-        margin: 6rem 0 1rem 0;
+    .texts {
+        display: flex;
+        flex-direction: column;
+        align-items: flex-end;
+        align-content: flex-end;
+        justify-content: center;
+        margin: 0 19rem 0 9rem;
+        h3 {
+            text-align: right;
+            margin: 0 0 1rem 0;
+        }
+        p {
+            text-align: right;
+            margin: 0 0 0 0;
+        }
+        a {
+            @include read-more-button;
+            text-align: right;
+            margin-top: 2rem;
+        }
     }
-    p {
-        margin: 0 12rem 0 0;
-    }
-    a {
-        @include read-more-button;
-        text-align: right;
-        margin-top: 2rem;
-    }
+    
 }
 
 // Communication
@@ -165,6 +191,15 @@
                 position: relative;
                 top: 1.5rem;
                 margin: 0 0 0 1rem;
+                a {
+                    text-decoration: none;
+                    color: $black;
+                    transition: ease 0.2s;
+                }
+                a:hover {
+                    color: $orange;
+                    border-bottom: solid 2px $orange;
+                }
             }
         }
         p {
@@ -196,7 +231,7 @@
     background: url(../shoe-kloset/banner.jpg);
     background-size: cover;
     background-repeat: no-repeat;
-    height: 31vw;
+    height: 30vw;
 }
 
 
@@ -207,7 +242,8 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 30vw;
+    height: 100%;
+    padding: 4rem 0 7rem 0;
     img {
         box-shadow: 3rem 3rem 0px $orange;
     }
@@ -219,7 +255,7 @@
             font-size: 52px;
             text-transform: uppercase;
             font-weight: 200;
-            margin: 7rem 0 3rem 0;
+            margin: 5rem 0 2rem 0;
         }
         p {
             @include p-font;
@@ -235,19 +271,21 @@
 // 3 images
 section {
     background-color: $pink;
-    height: 35vw;
+    height: 100%;
+    padding: 5rem 0;
     display: flex;
     justify-content: center;
     align-content: space-around;
     align-items: center;
+    flex-wrap: wrap;
     margin-bottom: 0;
     img:nth-child(1) {
-        margin: 0 1.5rem 0 0;
+        margin: 1rem;
     }
     img:nth-child(2) {
-        margin: 0 1.5rem 0 1.5rem;
+        margin: 1rem;
     }
     img:nth-child(3) {
-        margin: 0 0rem 0 1.5rem;
+        margin: 1rem;
     }
 }
