--- a/styles/sass/blog/_blog.scss
+++ b/styles/sass/blog/_blog.scss
@@ -16,6 +16,14 @@
         right: 4rem;
         top: 1rem;
     }
+        input[type="checkbox"] {
+            text-align: center;
+            position: relative;
+            right: 4rem;
+            top: 1rem;
+        }
+        
+    }
 
     // Overlapped image
     .blog-box-header {
@@ -28,7 +36,7 @@
             z-index: 10;
         }
     }
-}
+
 
 
 
