--- a/styles/sass/layout/_footer.scss
+++ b/styles/sass/layout/_footer.scss
@@ -6,11 +6,16 @@ footer {
     width: 100%;
     text-align: center;
     p {
-        font-family: $content-font;
-        font-size: 20px;
-        font-weight: 100;
-        color: $white;
         padding-top: 0.7rem;
         margin: 0;
+        a{
+            font-family: $content-font;
+            text-decoration: none;
+            font-size: 20px;
+            font-weight: 100;
+            color: $white;
+            
+        }
+        
     }
 }
