--- a/styles/sass/layout/_nav-mediaq.scss
+++ b/styles/sass/layout/_nav-mediaq.scss
@@ -1,13 +1,63 @@
-@media (max-width: 500px) {
+@media (max-width: 1133px) {
+    .logo {
+        margin-top: -3rem;
+        margin-left: 5vw;
+    }
+}
+
+@media (max-width: 850px) {
+    .logo {
+        position: absolute;
+        top: 3.5rem;
+        left: -2rem;
+        font-size: 30px;
+        line-height: 30px;
+    }
     .dt-nav {
+        display: flex;
+        justify-content: center;
+        margin-right: 0;
+        ul {
+            margin-bottom: 4rem;
+            margin-right: 0;
+            padding-top: 1rem;
+        }
+    }
+}
+
+@media (max-width: 650px) {
+    .logo {
         display: none;
     }
+}
+
+@media (max-width: 500px) {
     .sticky-bar {
         width: 100%;
         height: 4rem;
         background-color: $black;
         top: 0;
         position: fixed;
-        z-index: 30;
+        z-index: 60;
+    }
+    .dt-nav {
+        position: fixed;
+        top: 0;
+        right: 0;
+        left: 0;
+        margin-right: 0;
+        z-index: 85;
+        ul {
+            margin-bottom: 4rem;
+            margin-right: 0;
+            padding: 0;
+            li {
+                margin-right: 1rem;
+                a {
+                    color: $white;
+                    font-size: 3vw;
+                }
+            }
+        }
     }
 }
