--- a/styles/style.css
+++ b/styles/style.css
@@ -761,9 +761,10 @@ section img:nth-child(3) {
   line-height: 46px;
   letter-spacing: 1.1px;
   color: #0D0D0D;
-  margin-top: -2rem;
+  margin-top: 0rem;
   margin-left: 12.4rem;
   text-decoration: none;
+  width: 3rem;
 }
 
 .dt-nav ul li a,
@@ -811,17 +812,71 @@ section img:nth-child(3) {
   color: #FFFFFF;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 1133px) {
+  .logo {
+    margin-top: -3rem;
+    margin-left: 5vw;
+  }
+}
+
+@media (max-width: 850px) {
+  .logo {
+    position: absolute;
+    top: 3.5rem;
+    left: -2rem;
+    font-size: 30px;
+    line-height: 30px;
+  }
   .dt-nav {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+    margin-right: 0;
+  }
+  .dt-nav ul {
+    margin-bottom: 4rem;
+    margin-right: 0;
+    padding-top: 1rem;
+  }
+}
+
+@media (max-width: 650px) {
+  .logo {
     display: none;
   }
+}
+
+@media (max-width: 500px) {
   .sticky-bar {
     width: 100%;
     height: 4rem;
     background-color: #0D0D0D;
     top: 0;
     position: fixed;
-    z-index: 30;
+    z-index: 60;
+  }
+  .dt-nav {
+    position: fixed;
+    top: 0;
+    right: 0;
+    left: 0;
+    margin-right: 0;
+    z-index: 85;
+  }
+  .dt-nav ul {
+    margin-bottom: 4rem;
+    margin-right: 0;
+    padding: 0;
+  }
+  .dt-nav ul li {
+    margin-right: 1rem;
+  }
+  .dt-nav ul li a {
+    color: #FFFFFF;
+    font-size: 3vw;
   }
 }
 
@@ -835,12 +890,16 @@ footer {
 }
 
 footer p {
+  padding-top: 0.7rem;
+  margin: 0;
+}
+
+footer p a {
   font-family: "Lato", sans-serif;
+  text-decoration: none;
   font-size: 20px;
   font-weight: 100;
   color: #FFFFFF;
-  padding-top: 0.7rem;
-  margin: 0;
 }
 
 @media (max-width: 1750px) {
@@ -1072,13 +1131,20 @@ footer p {
   top: 1rem;
 }
 
-.blog-background .blog-box-header {
+.blog-background input[type="checkbox"] {
+  text-align: center;
+  position: relative;
+  right: 4rem;
+  top: 1rem;
+}
+
+.blog-box-header {
   margin-top: -2rem;
   position: absolute;
   right: 0;
 }
 
-.blog-background .blog-box-header img {
+.blog-box-header img {
   width: 57.6vw;
   -webkit-box-shadow: -3rem 3rem 0px #FE6F19;
           box-shadow: -3rem 3rem 0px #FE6F19;
